--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+blank.html
+login-v2.html
+top-nav.html
 # Logs
 logs
 *.log
@@ -6,6 +9,7 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
+
 
 node_modules
 dist
